# thermolib

./: .gitignore  CMakeLists.txt  Cargo.toml  LICENSE  README.md  main.py  pyproject.toml
res/: 22DimethylButane.json  23DimethylButane.json  3MethylPentane.json  C4F10.json  C5F12.json  C6F14.json  NH3.json  SO2.json
scripts/: fit_cp0.py  plot_ceos.py
scripts/algorithms/: brent_zero.py
scripts/pc_saft/: c_term.md  c_term.py  calc_gly.py  gii_gly.py  hc_pure.md  hc_pure.py  hs_term.md  hs_term.py  p_term.md  p_term.py  pc_saft_mix2.py  s_pc_saft_mix2.py  test_feos.py  x_term.md  x_term.py
src/: CMakeLists.txt  algorithms.rs  helmholtz.rs  ideal_gas.rs  lib.rs  liquid_metal.rs  main.cpp  pc_saft.rs  pc_saft_g.rs  pc_saft_mix.rs  pr.rs  pr_mix.rs  pubtraits.rs  python.rs  rk.rs  srk.rs  vdw.rs
src/helmholtz/: alpha.rs  alpha_i.rs  alpha_r.rs  anc_eqn.rs  ancillary_equations.rs  assoc.rs  helmholtz_pure.rs  ideal_helmholtz_equation.rs  ideal_terms.rs  real_helmholtz_equation.rs  residual_helmholtz_equation.rs  residual_terms.rs  rho_ini.rs
src/liquid_metal/: eta.rs  lambda.rs  metals.md  rho.rs
src/pc_saft/: assoc_pure.rs  assoc_term.rs  disp_term.rs  gii_term.rs  hs_term.rs  macros.rs  pc_saft_gly.rs  pc_saft_gly_mix2.rs  pc_saft_gly_pure.rs  pc_saft_mix.rs  pc_saft_mix2.rs  pc_saft_pure.rs  pc_saft_ygl.rs  pc_saft_ygl_pure.rs  pdd_term.rs  polar_term.rs  pqq_term.rs  s_pc_saft_mix2.rs
src/pr/: pr.h  pr_imp.cpp  pr_imp.h
src/rk/: rk.h  rk_imp.cpp  rk_imp.h
src/srk/: srk.h  srk_imp.cpp  srk_imp.h
src/vtpryw/: vtpryw.h  vtpryw_imp.cpp  vtpryw_imp.h
tests/: plot_ceos.py  test_fluid.rs  test_fluids.rs  test_json.rs  test_python.py  test_so2.rs  verify_so2.rs
tests/internals/: mod.rs
wrappers/python/: thermolib.py
