[package]
name = "thermolib"
version = "0.7.3"
edition = "2021"
license = "MIT"
description = "An open-source library for the calculation of fluid properties"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
thiserror = "1.0"
eframe = "0.27.2"
serde_json = "1.0.110"

[dependencies.serde]
version = "1.0.200"
features = ["derive"]

[dependencies.pyo3]
version = "0.20.0"
features = ["anyhow", "extension-module"]

[lib]
name = "thermolib"
crate-type = ["cdylib" ,"rlib"]

[features]
with_pyo3 = []

