[package]
name = "thermolib"
version = "0.9.2"
edition = "2024"
license = "MIT"
description = "An open-source library for the calculation of fluid properties."
repository = "https://github.com/shaw-yu2020/thermolib"

[dependencies]
anyhow = "1.0"
thiserror = "2.0"

[dependencies.pyo3]
version = "0.23.5"
features = ["multiple-pymethods", "extension-module", "abi3-py39", "anyhow"]

[lib]
name = "thermolib"
crate-type = ["cdylib" ,"rlib"]

[features]
with_pyo3 = []

